--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-typewriter": "^3.2.3",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.5.0",
 		"vite": "^5.4.11"
