--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.5.0",
 		"vite": "^5.4.11"
+	},
+	"dependencies": {
+		"@upstash/ratelimit": "^2.0.5",
+		"@upstash/redis": "^1.34.3"
 	}
 }
