Adding cloudflare redis. Retrying deploy

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@upstash/ratelimit": "^2.0.5",
-		"@upstash/redis": "^1.34.3"
+		"@upstash/redis": "^1.34.3",
+		"cloudflare": "link:@upstash/redis/cloudflare"
 	}
 }
