--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
 		"@sveltejs/kit": "^2.5.27",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "1.0.0-next.79",
+		"clsx": "^2.1.1",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.9",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-typewriter": "^3.2.3",
+		"tailwind-merge": "^2.6.0",
+		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.9",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.5.0",
 		"vite": "^5.4.11"
 	},
